src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABANICO
    BOOL
    CCODE
    COMMENT
    CUANDO
    DEF
    ELSE
    ENCASO
    ENTONS
    EQUAL
    EXEC
    EXPONENTE
    FALSE
    FINENCASO
    FOR
    FUNCTION
    GOLPE
    IF
    IN
    LBRACE
    METRONOMO
    PERCUTOR
    RBRACE
    SEMICOLON
    SET
    SINO
    TRUE
    VERTICAL
    VIBRATO
    WHILE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> RESERVED VAR ASSIGN expression
Rule 2     expression -> arith-expression
Rule 3     arith-expression -> arith-expression EQUALS term
Rule 4     arith-expression -> arith-expression DIFFERENT term
Rule 5     arith-expression -> arith-expression LESSTHAN term
Rule 6     arith-expression -> arith-expression MORETHAN term
Rule 7     arith-expression -> arith-expression LESSTHANE term
Rule 8     arith-expression -> arith-expression MORETHANE term
Rule 9     arith-expression -> NEGATIVE arith-expression
Rule 10    arith-expression -> arith-expression PLUS term
Rule 11    arith-expression -> arith-expression MINUS term
Rule 12    arith-expression -> term
Rule 13    term -> term TIMES factor
Rule 14    term -> term POWER factor
Rule 15    term -> term DIVIDE factor
Rule 16    term -> term MODULE factor
Rule 17    term -> term WHOLEDIVIDE factor
Rule 18    term -> factor
Rule 19    factor -> NUMBER
Rule 20    factor -> VAR
Rule 21    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ABANICO              : 
ASSIGN               : 1
BOOL                 : 
CCODE                : 
COMMENT              : 
CUANDO               : 
DEF                  : 
DIFFERENT            : 4
DIVIDE               : 15
ELSE                 : 
ENCASO               : 
ENTONS               : 
EQUAL                : 
EQUALS               : 3
EXEC                 : 
EXPONENTE            : 
FALSE                : 
FINENCASO            : 
FOR                  : 
FUNCTION             : 
GOLPE                : 
IF                   : 
IN                   : 
LBRACE               : 
LESSTHAN             : 5
LESSTHANE            : 7
LPAREN               : 21
METRONOMO            : 
MINUS                : 11
MODULE               : 16
MORETHAN             : 6
MORETHANE            : 8
NEGATIVE             : 9
NUMBER               : 19
PERCUTOR             : 
PLUS                 : 10
POWER                : 14
RBRACE               : 
RESERVED             : 1
RPAREN               : 21
SEMICOLON            : 
SET                  : 
SINO                 : 
TIMES                : 13
TRUE                 : 
VAR                  : 1 20
VERTICAL             : 
VIBRATO              : 
WHILE                : 
WHOLEDIVIDE          : 17
error                : 

Nonterminals, with rules where they appear

arith-expression     : 2 3 4 5 6 7 8 9 10 11
expression           : 1 21 0
factor               : 13 14 15 16 17 18
term                 : 3 4 5 6 7 8 10 11 12 13 14 15 16 17

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . RESERVED VAR ASSIGN expression
    (2) expression -> . arith-expression
    (3) arith-expression -> . arith-expression EQUALS term
    (4) arith-expression -> . arith-expression DIFFERENT term
    (5) arith-expression -> . arith-expression LESSTHAN term
    (6) arith-expression -> . arith-expression MORETHAN term
    (7) arith-expression -> . arith-expression LESSTHANE term
    (8) arith-expression -> . arith-expression MORETHANE term
    (9) arith-expression -> . NEGATIVE arith-expression
    (10) arith-expression -> . arith-expression PLUS term
    (11) arith-expression -> . arith-expression MINUS term
    (12) arith-expression -> . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    RESERVED        shift and go to state 2
    NEGATIVE        shift and go to state 6
    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    expression                     shift and go to state 1
    arith-expression               shift and go to state 4
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 1

    (0) S' -> expression .



state 2

    (1) expression -> RESERVED . VAR ASSIGN expression

    VAR             shift and go to state 10


state 3

    (20) factor -> VAR .

    TIMES           reduce using rule 20 (factor -> VAR .)
    POWER           reduce using rule 20 (factor -> VAR .)
    DIVIDE          reduce using rule 20 (factor -> VAR .)
    MODULE          reduce using rule 20 (factor -> VAR .)
    WHOLEDIVIDE     reduce using rule 20 (factor -> VAR .)
    EQUALS          reduce using rule 20 (factor -> VAR .)
    DIFFERENT       reduce using rule 20 (factor -> VAR .)
    LESSTHAN        reduce using rule 20 (factor -> VAR .)
    MORETHAN        reduce using rule 20 (factor -> VAR .)
    LESSTHANE       reduce using rule 20 (factor -> VAR .)
    MORETHANE       reduce using rule 20 (factor -> VAR .)
    PLUS            reduce using rule 20 (factor -> VAR .)
    MINUS           reduce using rule 20 (factor -> VAR .)
    $end            reduce using rule 20 (factor -> VAR .)
    RPAREN          reduce using rule 20 (factor -> VAR .)


state 4

    (2) expression -> arith-expression .
    (3) arith-expression -> arith-expression . EQUALS term
    (4) arith-expression -> arith-expression . DIFFERENT term
    (5) arith-expression -> arith-expression . LESSTHAN term
    (6) arith-expression -> arith-expression . MORETHAN term
    (7) arith-expression -> arith-expression . LESSTHANE term
    (8) arith-expression -> arith-expression . MORETHANE term
    (10) arith-expression -> arith-expression . PLUS term
    (11) arith-expression -> arith-expression . MINUS term

    $end            reduce using rule 2 (expression -> arith-expression .)
    RPAREN          reduce using rule 2 (expression -> arith-expression .)
    EQUALS          shift and go to state 11
    DIFFERENT       shift and go to state 12
    LESSTHAN        shift and go to state 13
    MORETHAN        shift and go to state 14
    LESSTHANE       shift and go to state 15
    MORETHANE       shift and go to state 16
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18


state 5

    (12) arith-expression -> term .
    (13) term -> term . TIMES factor
    (14) term -> term . POWER factor
    (15) term -> term . DIVIDE factor
    (16) term -> term . MODULE factor
    (17) term -> term . WHOLEDIVIDE factor

    EQUALS          reduce using rule 12 (arith-expression -> term .)
    DIFFERENT       reduce using rule 12 (arith-expression -> term .)
    LESSTHAN        reduce using rule 12 (arith-expression -> term .)
    MORETHAN        reduce using rule 12 (arith-expression -> term .)
    LESSTHANE       reduce using rule 12 (arith-expression -> term .)
    MORETHANE       reduce using rule 12 (arith-expression -> term .)
    PLUS            reduce using rule 12 (arith-expression -> term .)
    MINUS           reduce using rule 12 (arith-expression -> term .)
    $end            reduce using rule 12 (arith-expression -> term .)
    RPAREN          reduce using rule 12 (arith-expression -> term .)
    TIMES           shift and go to state 19
    POWER           shift and go to state 20
    DIVIDE          shift and go to state 21
    MODULE          shift and go to state 22
    WHOLEDIVIDE     shift and go to state 23


state 6

    (9) arith-expression -> NEGATIVE . arith-expression
    (3) arith-expression -> . arith-expression EQUALS term
    (4) arith-expression -> . arith-expression DIFFERENT term
    (5) arith-expression -> . arith-expression LESSTHAN term
    (6) arith-expression -> . arith-expression MORETHAN term
    (7) arith-expression -> . arith-expression LESSTHANE term
    (8) arith-expression -> . arith-expression MORETHANE term
    (9) arith-expression -> . NEGATIVE arith-expression
    (10) arith-expression -> . arith-expression PLUS term
    (11) arith-expression -> . arith-expression MINUS term
    (12) arith-expression -> . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NEGATIVE        shift and go to state 6
    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    arith-expression               shift and go to state 24
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 7

    (18) term -> factor .

    TIMES           reduce using rule 18 (term -> factor .)
    POWER           reduce using rule 18 (term -> factor .)
    DIVIDE          reduce using rule 18 (term -> factor .)
    MODULE          reduce using rule 18 (term -> factor .)
    WHOLEDIVIDE     reduce using rule 18 (term -> factor .)
    EQUALS          reduce using rule 18 (term -> factor .)
    DIFFERENT       reduce using rule 18 (term -> factor .)
    LESSTHAN        reduce using rule 18 (term -> factor .)
    MORETHAN        reduce using rule 18 (term -> factor .)
    LESSTHANE       reduce using rule 18 (term -> factor .)
    MORETHANE       reduce using rule 18 (term -> factor .)
    PLUS            reduce using rule 18 (term -> factor .)
    MINUS           reduce using rule 18 (term -> factor .)
    $end            reduce using rule 18 (term -> factor .)
    RPAREN          reduce using rule 18 (term -> factor .)


state 8

    (19) factor -> NUMBER .

    TIMES           reduce using rule 19 (factor -> NUMBER .)
    POWER           reduce using rule 19 (factor -> NUMBER .)
    DIVIDE          reduce using rule 19 (factor -> NUMBER .)
    MODULE          reduce using rule 19 (factor -> NUMBER .)
    WHOLEDIVIDE     reduce using rule 19 (factor -> NUMBER .)
    EQUALS          reduce using rule 19 (factor -> NUMBER .)
    DIFFERENT       reduce using rule 19 (factor -> NUMBER .)
    LESSTHAN        reduce using rule 19 (factor -> NUMBER .)
    MORETHAN        reduce using rule 19 (factor -> NUMBER .)
    LESSTHANE       reduce using rule 19 (factor -> NUMBER .)
    MORETHANE       reduce using rule 19 (factor -> NUMBER .)
    PLUS            reduce using rule 19 (factor -> NUMBER .)
    MINUS           reduce using rule 19 (factor -> NUMBER .)
    $end            reduce using rule 19 (factor -> NUMBER .)
    RPAREN          reduce using rule 19 (factor -> NUMBER .)


state 9

    (21) factor -> LPAREN . expression RPAREN
    (1) expression -> . RESERVED VAR ASSIGN expression
    (2) expression -> . arith-expression
    (3) arith-expression -> . arith-expression EQUALS term
    (4) arith-expression -> . arith-expression DIFFERENT term
    (5) arith-expression -> . arith-expression LESSTHAN term
    (6) arith-expression -> . arith-expression MORETHAN term
    (7) arith-expression -> . arith-expression LESSTHANE term
    (8) arith-expression -> . arith-expression MORETHANE term
    (9) arith-expression -> . NEGATIVE arith-expression
    (10) arith-expression -> . arith-expression PLUS term
    (11) arith-expression -> . arith-expression MINUS term
    (12) arith-expression -> . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    RESERVED        shift and go to state 2
    NEGATIVE        shift and go to state 6
    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    expression                     shift and go to state 25
    arith-expression               shift and go to state 4
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 10

    (1) expression -> RESERVED VAR . ASSIGN expression

    ASSIGN          shift and go to state 26


state 11

    (3) arith-expression -> arith-expression EQUALS . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 27
    factor                         shift and go to state 7

state 12

    (4) arith-expression -> arith-expression DIFFERENT . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 28
    factor                         shift and go to state 7

state 13

    (5) arith-expression -> arith-expression LESSTHAN . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 29
    factor                         shift and go to state 7

state 14

    (6) arith-expression -> arith-expression MORETHAN . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 30
    factor                         shift and go to state 7

state 15

    (7) arith-expression -> arith-expression LESSTHANE . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 31
    factor                         shift and go to state 7

state 16

    (8) arith-expression -> arith-expression MORETHANE . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 32
    factor                         shift and go to state 7

state 17

    (10) arith-expression -> arith-expression PLUS . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 33
    factor                         shift and go to state 7

state 18

    (11) arith-expression -> arith-expression MINUS . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    term                           shift and go to state 34
    factor                         shift and go to state 7

state 19

    (13) term -> term TIMES . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    factor                         shift and go to state 35

state 20

    (14) term -> term POWER . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    factor                         shift and go to state 36

state 21

    (15) term -> term DIVIDE . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    factor                         shift and go to state 37

state 22

    (16) term -> term MODULE . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    factor                         shift and go to state 38

state 23

    (17) term -> term WHOLEDIVIDE . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    factor                         shift and go to state 39

state 24

    (9) arith-expression -> NEGATIVE arith-expression .
    (3) arith-expression -> arith-expression . EQUALS term
    (4) arith-expression -> arith-expression . DIFFERENT term
    (5) arith-expression -> arith-expression . LESSTHAN term
    (6) arith-expression -> arith-expression . MORETHAN term
    (7) arith-expression -> arith-expression . LESSTHANE term
    (8) arith-expression -> arith-expression . MORETHANE term
    (10) arith-expression -> arith-expression . PLUS term
    (11) arith-expression -> arith-expression . MINUS term

    EQUALS          reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    DIFFERENT       reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    LESSTHAN        reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    MORETHAN        reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    LESSTHANE       reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    MORETHANE       reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    $end            reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    RPAREN          reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18

  ! PLUS            [ reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .) ]
  ! MINUS           [ reduce using rule 9 (arith-expression -> NEGATIVE arith-expression .) ]
  ! EQUALS          [ shift and go to state 11 ]
  ! DIFFERENT       [ shift and go to state 12 ]
  ! LESSTHAN        [ shift and go to state 13 ]
  ! MORETHAN        [ shift and go to state 14 ]
  ! LESSTHANE       [ shift and go to state 15 ]
  ! MORETHANE       [ shift and go to state 16 ]


state 25

    (21) factor -> LPAREN expression . RPAREN

    RPAREN          shift and go to state 40


state 26

    (1) expression -> RESERVED VAR ASSIGN . expression
    (1) expression -> . RESERVED VAR ASSIGN expression
    (2) expression -> . arith-expression
    (3) arith-expression -> . arith-expression EQUALS term
    (4) arith-expression -> . arith-expression DIFFERENT term
    (5) arith-expression -> . arith-expression LESSTHAN term
    (6) arith-expression -> . arith-expression MORETHAN term
    (7) arith-expression -> . arith-expression LESSTHANE term
    (8) arith-expression -> . arith-expression MORETHANE term
    (9) arith-expression -> . NEGATIVE arith-expression
    (10) arith-expression -> . arith-expression PLUS term
    (11) arith-expression -> . arith-expression MINUS term
    (12) arith-expression -> . term
    (13) term -> . term TIMES factor
    (14) term -> . term POWER factor
    (15) term -> . term DIVIDE factor
    (16) term -> . term MODULE factor
    (17) term -> . term WHOLEDIVIDE factor
    (18) term -> . factor
    (19) factor -> . NUMBER
    (20) factor -> . VAR
    (21) factor -> . LPAREN expression RPAREN

    RESERVED        shift and go to state 2
    NEGATIVE        shift and go to state 6
    NUMBER          shift and go to state 8
    VAR             shift and go to state 3
    LPAREN          shift and go to state 9

    expression                     shift and go to state 41
    arith-expression               shift and go to state 4
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 27

    (3) arith-expression -> arith-expression EQUALS term .
    (13) term -> term . TIMES factor
    (14) term -> term . POWER factor
    (15) term -> term . DIVIDE factor
    (16) term -> term . MODULE factor
    (17) term -> term . WHOLEDIVIDE factor

    EQUALS          reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    DIFFERENT       reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    LESSTHAN        reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    MORETHAN        reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    LESSTHANE       reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    MORETHANE       reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    PLUS            reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    MINUS           reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    $end            reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    RPAREN          reduce using rule 3 (arith-expression -> arith-expression EQUALS term .)
    TIMES           shift and go to state 19
    POWER           shift and go to state 20
    DIVIDE          shift and go to state 21
    MODULE          shift and go to state 22
    WHOLEDIVIDE     shift and go to state 23


state 28

    (4) arith-expression -> arith-expression DIFFERENT term .
    (13) term -> term . TIMES factor
    (14) term -> term . POWER factor
    (15) term -> term . DIVIDE factor
    (16) term -> term . MODULE factor
    (17) term -> term . WHOLEDIVIDE factor

    EQUALS          reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    DIFFERENT       reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    LESSTHAN        reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    MORETHAN        reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    LESSTHANE       reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    MORETHANE       reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    PLUS            reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    MINUS           reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    $end            reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    RPAREN          reduce using rule 4 (arith-expression -> arith-expression DIFFERENT term .)
    TIMES           shift and go to state 19
    POWER           shift and go to state 20
    DIVIDE          shift and go to state 21
    MODULE          shift and go to state 22
    WHOLEDIVIDE     shift and go to state 23


state 29

    (5) arith-expression -> arith-expression LESSTHAN term .
    (13) term -> term . TIMES factor
    (14) term -> term . POWER factor
    (15) term -> term . DIVIDE factor
    (16) term -> term . MODULE factor
    (17) term -> term . WHOLEDIVIDE factor

    EQUALS          reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    DIFFERENT       reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    LESSTHAN        reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    MORETHAN        reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    LESSTHANE       reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    MORETHANE       reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    PLUS            reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    MINUS           reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    $end            reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    RPAREN          reduce using rule 5 (arith-expression -> arith-expression LESSTHAN term .)
    TIMES           shift and go to state 19
    POWER           shift and go to state 20
    DIVIDE          shift and go to state 21
    MODULE          shift and go to state 22
    WHOLEDIVIDE     shift and go to state 23


state 30

    (6) arith-expression -> arith-expression MORETHAN term .
    (13) term -> term . TIMES factor
    (14) term -> term . POWER factor
    (15) term -> term . DIVIDE factor
    (16) term -> term . MODULE factor
    (17) term -> term . WHOLEDIVIDE factor
